// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputField renders with description 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
    data-cy="controlId"
  >
    <label
      class="form-label"
      for="controlId"
    >
      label *
    </label>
    <input
      class="form-control"
      id="controlId"
      name="name"
      required=""
      type="text"
    />
    <small
      class="text-muted contactFormTextMuted form-text"
    >
      description
    </small>
    <div
      class="invalid-feedback"
    >
      errorMessage
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputField renders with empty label and filled ariaLabel 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
    data-cy="controlId"
  >
    <input
      aria-label="ariaLabel"
      class="form-control"
      id="controlId"
      name="name"
      required=""
      type="text"
    />
    <div
      class="invalid-feedback"
    >
      errorMessage
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputField renders with required parameters 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
    data-cy="controlId"
  >
    <label
      class="form-label"
      for="controlId"
    >
      label *
    </label>
    <input
      class="form-control"
      id="controlId"
      name="name"
      required=""
      type="text"
    />
    <div
      class="invalid-feedback"
    >
      errorMessage
    </div>
  </div>
</DocumentFragment>
`;
